tests/snapshots/integration__integration_tests__step_alias__alias_spawn_failure_has_one_source_detail.snap
---
source: tests/integration_tests/step_alias.rs
expression: stderr
---
[0m[0m[31m✗[39m [31mFailed to run alias 'move-away'[39m
[107m [0m Failed to execute sh @ _REPO_: No such file or directory (os error 2)
[107m [0m No such file or directory (os error 2)
