tests/snapshots/integration__integration_tests__step_alias__alias_verbose_variable_table.snap
---
source: tests/integration_tests/step_alias.rs
info:
  program: wt
  args:
    - "-v"
    - greet
    - world
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLAUDE_CONFIG_DIR: "[TEST_CLAUDE_CONFIG]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_MOCK_CONFIG_DIR: "[TEST_MOCK_CONFIG]"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
hello world

----- stderr -----
[2m○[22m [1mgreet[22m template variables:
[107m [0m branch                = feature
[107m [0m worktree_path         = _REPO_.feature
[107m [0m worktree_name         = repo.feature
[107m [0m [2mcommit                = (unused)[22m
[107m [0m [2mshort_commit          = (unused)[22m
[107m [0m [2mupstream              = (unused)[22m
[107m [0m repo                  = repo
[107m [0m repo_path             = _REPO_
[107m [0m [2mowner                 = (unused)[22m
[107m [0m [2mprimary_worktree_path = (unused)[22m
[107m [0m [2mdefault_branch        = (unused)[22m
[107m [0m [2mremote                = (unused)[22m
[107m [0m [2mremote_url            = (unused)[22m
[107m [0m cwd                   = _REPO_.feature
[107m [0m args                  = world
[36m◎[39m [36mRunning alias [1mgreet[22m[39m
[2m○[22m [1mgreet[22m source
[107m [0m [2m[0m[2m[34mecho[0m[2m hello [0m[2m[32m{{[0m[2m args [0m[2m[32m}}[0m
[2m○[22m [1mgreet[22m result
[107m [0m [2m[0m[2m[34mecho[0m[2m hello world[0m
[0m
